...
              padding: 4,
              flexDirection: 'row',
              borderRadius: 4,
              backgroundColor: 'rgba(120,120,120,0.1)',
            }}>
            <Entypo name="edit" size={16} color="#abb0b0" />
            <Text style={{color: '#abb0b0', paddingLeft: 8}}>Edit profile</Text>
          </TouchableOpacity>
        </View>
        {avatar ? <UserImage dropdown={dropdown} uri={avatar} /> : null}
      </ProfileContainer>
      <Container style={{margin: 16}}>
        <Info
...
